maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:71: error: reassignment to val
      setDirection=Direction.North
                  ^ShortestPathMaze:75: error: reassignment to val
      setDirection=Direction.WEST
                  ^ShortestPathMaze:79: error: reassignment to val
      setDirection=Direction.EAST
                  ^ShortestPathMaze:83: error: reassignment to val
      setDirection=Direction.SOUTH
                  ^